--- a/appTask2/appTask2.css
+++ b/appTask2/appTask2.css
@@ -1,37 +1,30 @@
-.body {
-	Background-color: #F0F0F0;
+
+* {
+	background-color: #DDDDDD;
 }
 
-#listDiv {
-	background-color: #F0F0F0;
-	border: 1px solid black;
-	border-radius: 5px;
-	margin: 10px;
+.inputfs {
+	width: 400px;
+	margin: 5px auto;
 }
 
-#appBox {
-	width: 700px;
-	background-color: White;
-	border: 2px solid black;
-	border-radius: 10px;
-	margin: auto;
-	margin-top: 200px;
+.inputLabel {
+	width: 20%;
 }
 
-#appHeader {
-	text-align: center;
+.inputTextfield {
+	width: 70%;
 }
 
-#Input {
-	text-align: center;
+.inputButton {
+	width: 10%;
 }
 
-li {
-	width: 600px;
-	margin-bottom: 10px;
-	word-wrap: break-word;
-}
-
-li button {
+.removeButton {
 	float: right;
+}
+
+ul {
+    padding: 0;
+    list-style-type: none;
 }
